# plant-3d-vision

./: .gitignore  .gitmodules  MANIFEST.in  README.md  carve-space  compute-masks  compute-poses  evaluate_model.py  generate_poses.py  get_model.sh  install.sh  process-pcd  pyproject.toml  requirements.txt  run-colmap.sh  run-scan  run-scan_db  run-scan_db~  segment-skel  setup.py  undistort-images
.github/workflows/: ci.yml  delete_branch.yml  main.yml  pull_request.yml  push.yml  release.yml
conda_recipe/: meta.yaml  scan3d_0.4-linux.yaml
config/: colmap_log.txt  evaluation.toml  fast_geom_pipe_real.toml  geom_pipe_default.toml  geom_pipe_full.toml  geom_pipe_real.toml  geom_pipe_virtual.toml  intrinsic_calibration.toml  intrisic_calibration.toml  ml_pipe_default.toml  ml_pipe_full.toml  ml_pipe_real.toml  ml_pipe_real_2.toml  ml_pipe_virtual.toml  ml_pipe_vplants_0.toml  ml_pipe_vplants_1.toml  ml_pipe_vplants_3.toml  ml_pipe_vplants_4.toml  original_pipe_0.toml  original_pipe_1.toml  test_geom_pipe.toml  test_ml_pipe.toml  training_seg.toml  virtual_cylinder.toml
configs/: extrinsic_calibration.toml  fast_geom_pipe_real.toml  geom_pipe_full.toml  geom_pipe_real.toml  geom_pipe_virtual.toml  ml_pipe_full.toml  ml_pipe_real.toml  test_geom_pipe_real.toml
default/: circular_3.json  colmap.toml  csl_scan.toml  csl_scanner.json  csl_scanner.toml  object.json  path.json  pipeline.json  pipeline.toml  scanner.json  scanner_lyon_bis_up.json  segmentation2d.toml  segmentation2d_arabidopsis.toml  segmentation2d_colmap.toml  segmentation_bg.toml  virtual_path.json  virtual_scanner.json  virtual_scanner.toml
default/objects/: GT1.json
default/paths/: circular_6.json  circular_72.json
default/scanners/: csl_1.json  lyon_1.json
docker/: Dockerfile  build.sh  docker-entrypoint.sh  run.sh
docker/base/: Dockerfile  build.sh
docker/base-dev/: Dockerfile
docker/ci/: Dockerfile
docker/ci-dev/: Dockerfile
docker/colmap/: Dockerfile
docker/colmap3.8/: Dockerfile  build.sh
docker/colmap3.9/: Dockerfile
docker/colmap3.9.1/: Dockerfile
docker/dev/: Dockerfile  build.sh  run.sh
docker/ippn_2023/: Dockerfile  build.sh
docs/: backproject.md
lettucescan/: cl.py  colmap.py  db.py  geodesics.cl  masking.py  pcd.py  processing_block.py  space_carving.cl  util.py  vessels.py
lettucescan/cgal/: cgal.cc
lettucescan/cl/: FMM.h
lettucescan/cl_tmp/: CMakeLists.txt  FMM.cc  SpaceCarving.cc  SpaceCarving.h  bindings.cc  cl.cc  cl.h
lettucescan/geometry/: util.py
lettucescan/geometry/cgal/: CMakeLists.txt
lettucescan/geometry/hough/: CMakeLists.txt  hough.cc
lettucescan/pipeline/: arabidopsis.py  colmap.py  masking.py  pointcloud.py  processing_block.py  space_carving.py  undistort.py
lettucescan/space_carving/: CMakeLists.txt  SpaceCarving.h  bindings.cc
lettucescan/spacecarving/: CMakeLists.txt  SpaceCarving.cc
pipeline/: colmap_dense_0.json  colmap_space_carving_0.json  colmap_sparse_0.json  crop_0.json  masking_linear_0.json  pipeline.json  pipeline.toml  undist_0.json
plant3dvision/: __init__.py  arabidopsis.py  calibration.py  camera.py  camera_intrinsic.py  cl.py  colmap.py  compare.py  db.py  evaluation.py  filenames.py  geodesics.py  log.py  metrics.py  modules.py  proc2d.py  proc3d.py  tree.py  utils.py  visu.py
plant3dvision/kernels/: backprojection.c  geodesics.c
plant3dvision/tasks/: arabidopsis.py  calibration.py  cl.py  colmap.py  config.py  evaluation.py  ground_truth.py  proc2d.py  proc3d.py  visualization.py
processing/: active_contours.py  curve_skeleton.cc  masking.py  mesh2skel  parse_colmap.py  pcd2mesh  run-colmap.sh  segment-skel  vox2pcd
processing/example/: arabi_mesh.off  arabi_normals.ply  edges.txt  points.txt  points_adjusted.txt  points_adjusted.txt.npy
processing/src/: CMakeLists.txt  poisson_reconstruct.cc
romiscan/: __init__.py  arabidopsis.py  cl.py  colmap.py  db.py  filenames.py  geodesics.cl  geodesics.py  log.py  masking.py  metrics.py  modules.py  openmvg.py  pcd.py  pipeline.py  plantseg.py  proc2d.py  proc3d.py  rest.py  sfm.py  tasks.py  vessels.py
romiscan/ceres/: CMakeLists.txt  ceres.cc
romiscan/cgal/: CMakeLists.txt  cgal.cc
romiscan/evaluation/: tasks.py
romiscan/kernels/: backprojection.c  common.h  fim.c
romiscan/pipeline/: arabidopsis.py  colmap.py  masking.py  pointcloud.py
romiscan/pyceres/: CMakeLists.txt  ceres.cc
romiscan/tasks/: __init__.py  angles.py  arabidopsis.py  backprojection.py  cl.py  colmap.py  evaluation.py  improc.py  pcdproc.py  proc2d.py  proc3d.py  scan.py  visu.py  visualization.py
scanner/: localdirs.py
script/: pipeline.toml  workflow_segmentation2D.py
tests/: check_geom_pipe.sh  check_ml_pipe.sh  check_pipe.sh  colmap_log.txt  test-colmap.py  test_angles.py  test_arabidopsis.py  test_bounding_box.py  test_cl.py  test_colmap.py  test_geometry_hough.py  test_masking.py  test_metrics.py  test_pointcloud.py  test_proc2d.py  test_proc3d.py  test_runner.py  test_space_carving.py  test_task.py  test_undistortion.py  test_watch.py
tests/integration/: test_anglesandinternodes.py  test_cylinder_estimation.py  test_geom_anglesandinternodes.py  test_visualization.py  utilities.py
tests/testcfg/: geom_pipe_real.toml  geom_pipe_virtual.toml
tests/testdata/: cylinder.ply
tests/testdata/arabidopsis000/: files.json
tests/testdata/arabidopsis000/metadata/: metadata.json
tests/testdata/models/: files.json
tests/testdata/models/metadata/: models.json
tests/testdata/real_plant/: files.json  measures.json  scan.toml
tests/testdata/real_plant/metadata/: images.json  metadata.json
tests/testdata/virtual_plant/: files.json  scan.toml
tests/testdata/virtual_plant/VirtualPlant_arabidopsis_note___BRANCHON___fal___angles____inte_a7299a0b5f/: VirtualPlant_mtl.mtl
tests/testdata/virtual_plant/metadata/: VirtualPlant_arabidopsis_note___BRANCHON___fal___angles____inte_a7299a0b5f.json  (+1 more)
tests/unit/: test_arabidopsis.py  test_colmap.py  test_metrics.py  test_proc3d.py  test_runner.py  test_task.py  test_watch.py
utils/: get_model.sh  install_open3d.py
(+712 files in other folders)
