[tool.poetry]
name = "plant3dvision"
version = "0.10.99"
description = "The plant 3D vision tool."
authors = [
    "Timothée Wintz <timothee@timwin.fr>",
    "Nabil Ait Taleb <mohamednabil.aittaleb@sony.com>",
    "Jonathan LEGRAND <jonathan.legrand@ens-lyon.fr>"
]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://docs.romi-project.eu/documentation/"
repository = "https://github.com/romi/plant3dvision"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
docker = ">=5.0.3"
joblib = ">=1.1.0"
luigi = ">=2.8.11"
networkx = "^2.7.1"
open3d = ">=0.9,<0.15"
opencv-python = "4.2.0.34"
pandas = "^1.4.1"
pybind11 = "^2.9.1"
pyopencl = "2020.2.2"
PyWavefront = "^1.3.3"
scikit-image = "^0.19.2"
toml = "^0.10.2"
tqdm = "^4.63.0"
trimesh = "^3.10.2"
# https://python-poetry.org/docs/dependency-specification/#git-dependencies
romitask = { git = "https://github.com/romi/romitask.git", rev = "a641767e" }
plantdb = { git = "https://github.com/romi/plantdb.git", rev = "b999adb6" }
romiseg = { git = "https://github.com/romi/romiseg.git", rev = "ef3e0942" }
romicgal = { git = "https://github.com/romi/romicgal.git", rev = "0fd72b25" }
dtw = {git = "https://github.com/romi/dtw.git", rev = "develop"}

[tool.poetry.dev-dependencies]
Sphinx = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
robustness_comparison = "plant3dvision.bin.robustness_comparison:run"
robustness_comparison = "plant3dvision.bin.npz_volume_viewer:run"